<resources>
    <string name="app_name">Zibew Distributor</string>
    <string name="verify_number_text">Please verify your number so that your collegues, friends and family can find you on Zibew Distributor.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="agent">Agent</string>
    <string name="register_pharmacy">Register Pharmacy</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="select_location">Select Location</string>
    <string name="door_number">Door Number</string>
    <string name="certificates">Upload Certificates : </string>
    <string name="resend_otp"><u>Didn\'t get otp? Resend</u></string>
    <string name="verify_otp">Verify your number</string>
    <string name="verify_otp_text">OTP has been sent to your number. Please check your message box and submit.</string>
    <string name="verify_number">Enter OTP</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="request_processing">Request Processing</string>
    <string-array name="country_code">
        <item>Afghanistan (+93)</item>
        <item>Albania (+355)</item>
        <item>Algeria (+213)</item>
        <item>American Samoa (+1-684)</item>
        <item>Andorra (+376)</item>
        <item>Angola (+244)</item>
        <item>Anguilla (+1-264)</item>
        <item>Antarctica (+672)</item>
        <item>Antigua and Barbuda (+1-268)</item>
        <item>Argentina (+54)</item>
        <item>Armenia (+374)</item>
        <item>Aruba (+297)</item>
        <item>Australia (+61)</item>
        <item>Austria (+43)</item>
        <item>Azerbaijan (+994)</item>
        <item>Bahamas (+1-242)</item>
        <item>Bahrain (+973)</item>
        <item>Bangladesh (+880)</item>
        <item>Barbados (+1-246)</item>
        <item>Belarus (+375)</item>
        <item>Belgium (+32)</item>
        <item>Belize (+501)</item>
        <item>Benin (+229)</item>
        <item>Bermuda (+1-441)</item>
        <item>Bhutan (+975)</item>
        <item>Bolivia (+591)</item>
        <item>Bosnia and Herzegovina (+387)</item>
        <item>Botswana (+267)</item>
        <item>Brazil (+55)</item>
        <item>British Indian Ocean Territory (+246)</item>
        <item>British Virgin Islands (+1-284)</item>
        <item>Brunei (+673)</item>
        <item>Bulgaria (+359)</item>
        <item>Burkina Faso (+226)</item>
        <item>Burundi (+257)</item>
        <item>Cambodia (+855)</item>
        <item>Cameroon (+237)</item>
        <item>Canada (+1)</item>
        <item>Cape Verde (+238)</item>
        <item>Cayman Islands (+1-345)</item>
        <item>Central African Republic (+236)</item>
        <item>Chad (+235)</item>
        <item>Chile (+56)</item>
        <item>China (+86)</item>
        <item>Christmas Island (+61)</item>
        <item>Cocos Islands (+61)</item>
        <item>Colombia (+57)</item>
        <item>Comoros (+269)</item>
        <item>Cook Islands (+682)</item>
        <item>Costa Rica (+506)</item>
        <item>Croatia (+385)</item>
        <item>Cuba (+53)</item>
        <item>Curacao (+599)</item>
        <item>Cyprus (+357)</item>
        <item>Czech Republic (+420)</item>
        <item>Democratic Republic of the Congo (+243)</item>
        <item>Denmark (+45)</item>
        <item>Djibouti (+253)</item>
        <item>Dominica (+1-767)</item>
        <item>Dominican Republic (+1-809, 1-829, 1-849)</item>
        <item>East Timor (+670)</item>
        <item>Ecuador (+593)</item>
        <item>Egypt (+20)</item>
        <item>El Salvador (+503)</item>
        <item>Equatorial Guinea (+240)</item>
        <item>Eritrea (+291)</item>
        <item>Estonia (+372)</item>
        <item>Ethiopia (+251)</item>
        <item>Falkland Islands (+500)</item>
        <item>Faroe Islands (+298)</item>
        <item> Fiji (+679)</item>
        <item>Finland (+358)</item>
        <item>France (+33)</item>
        <item>French Polynesia (+689)</item>
        <item>Gabon (+241)</item>
        <item>Gambia (+220)</item>
        <item>Georgia (+995)</item>
        <item>Germany (+49)</item>
        <item>Ghana (+233)</item>
        <item>Gibraltar (+350)</item>
        <item>Greece (+30)</item>
        <item>Greenland (+299)</item>
        <item>Grenada (+1-473)</item>
        <item>Guam (+1-671)</item>
        <item>Guatemala (+502)</item>
        <item>Guernsey (+44-1481)</item>
        <item>Guinea (+224)</item>
        <item>Guinea-Bissau (+245)</item>
        <item>Guyana (+592)</item>
        <item>Haiti (+509)</item>
        <item>Honduras (+504)</item>
        <item>Hong Kong (+852)</item>
        <item>Hungary (+36)</item>
        <item>Iceland (+354)</item>
        <item>India (+91)</item>
        <item>Indonesia (+62)</item>
        <item>Iran (+98)</item>
        <item>Iraq (+964)</item>
        <item>Ireland (+353)</item>
        <item>Isle of Man (+44-1624)</item>
        <item>Israel (+972)</item>
        <item>Italy (+39)</item>
        <item>Ivory Coast (+225)</item>
        <item>Jamaica (+1-876)</item>
        <item>Japan (+81)</item>
        <item>Jersey (+44-1534)</item>
        <item>Jordan (+962)</item>
        <item>Kazakhstan (+7)</item>
        <item>Kenya (+254)</item>
        <item>Kiribati (+686)</item>
        <item>Kosovo (+383)</item>
        <item>Kuwait (+965)</item>
        <item>Kyrgyzstan (+996)</item>
        <item>Laos (+856)</item>
        <item>Latvia (+371)</item>
        <item>Lebanon (+961)</item>
        <item>Lesotho (+266)</item>
        <item>Liberia (+231)</item>
        <item>Libya (+218)</item>
        <item>Liechtenstein (+423)</item>
        <item>Lithuania (+370)</item>
        <item>Luxembourg (+352)</item>
        <item>Macau (+853)</item>
        <item>Macedonia (+389)</item>
        <item>Madagascar (+261)</item>
        <item>Malawi (+265)</item>
        <item>Malaysia (+60)</item>
        <item>Maldives (+960)</item>
        <item>Mali (+223)</item>
        <item>Malta (+356)</item>
        <item>Marshall Islands (+692)</item>
        <item>Mauritania (+222)</item>
        <item>Mauritius (+230)</item>
        <item>Mayotte (+262)</item>
        <item>Mexico (+52)</item>
        <item>Micronesia (+691)</item>
        <item>Moldova (+373)</item>
        <item>Monaco (+377)</item>
        <item>Mongolia (+976)</item>
        <item>Montenegro (+382)</item>
        <item>Montserrat (+1-664)</item>
        <item>Morocco (+212)</item>
        <item>Mozambique (+258)</item>
        <item>Myanmar (+95)</item>
        <item>Namibia (+264)</item>
        <item>Nauru (+674)</item>
        <item>Nepal (+977)</item>
        <item>Netherlands (+31)</item>
        <item>Netherlands Antilles (+599)</item>
        <item>New Caledonia (+687)</item>
        <item>New Zealand (+64)</item>
        <item>Nicaragua (+505)</item>
        <item>Niger (+227)</item>
        <item>Nigeria (+234)</item>
        <item>Niue (+683)</item>
        <item>North Korea (+850)</item>
        <item>Northern Mariana Islands (+1-670)</item>
        <item>Norway (+47)</item>
        <item>Oman (+968)</item>
        <item>Pakistan (+92)</item>
        <item>Palau (+680)</item>
        <item>Palestine (+970)</item>
        <item>Panama (+507)</item>
        <item>Papua New Guinea (+675)</item>
        <item>Paraguay (+595)</item>
        <item>Peru (+51)</item>
        <item>Philippines (+63)</item>
        <item>Pitcairn (+64)</item>
        <item>Poland (+48)</item>
        <item>Portugal (+351)</item>
        <item>Puerto Rico (+1-787, 1-939)</item>
        <item>Qatar (+974)</item>
        <item>Republic of the Congo (+242)</item>
        <item>Reunion (+262)</item>
        <item>Romania (+40)</item>
        <item>Russia (+7)</item>
        <item>Rwanda (+250)</item>
        <item>Saint Barthelemy (+590)</item>
        <item>Saint Helena (+290)</item>
        <item>Saint Kitts and Nevis (+1-869)</item>
        <item>Saint Lucia (+1-758)</item>
        <item>Saint Martin (+590)</item>
        <item>Saint Pierre and Miquelon (+508)</item>
        <item>Saint Vincent and the Grenadines (+1-784)</item>
        <item>Samoa (+685)</item>
        <item>San Marino (+378)</item>
        <item>Sao Tome and Principe (+239)</item>
        <item>Saudi Arabia (+966)</item>
        <item>Senegal (+221)</item>
        <item>Serbia (+381)</item>
        <item>Seychelles (+248)</item>
        <item>Sierra Leone (+232)</item>
        <item>Singapore (+65)</item>
        <item>Sint Maarten (+1-721)</item>
        <item>Slovakia (+421)</item>
        <item>Slovenia (+386)</item>
        <item>Solomon Islands (+677)</item>
        <item>Somalia (+252)</item>
        <item>South Africa (+27)</item>
        <item>South Korea (+82)</item>
        <item>South Sudan (+211)</item>
        <item>Spain (+34)</item>
        <item>Sri Lanka (+94)</item>
        <item>Sudan (+249)</item>
        <item>Suriname (+597)</item>
        <item>Svalbard and Jan Mayen (+47)</item>
        <item>Swaziland (+268)</item>
        <item>Sweden (+46)</item>
        <item>Switzerland (+41)</item>
        <item>Syria (+963)</item>
        <item>Taiwan (+886)</item>
        <item>Tajikistan (+992)</item>
        <item>Tanzania (+255)</item>
        <item>Thailand (+66)</item>
        <item>Togo (+228)</item>
        <item>Tokelau (+690)</item>
        <item>Tonga (+676)</item>
        <item>Trinidad and Tobago (+1-868)</item>
        <item>Tunisia (+216)</item>
        <item>Turkey (+90)</item>
        <item>Turkmenistan (+993)</item>
        <item>Turks and Caicos Islands (1-649)</item>
        <item>Tuvalu (+688)</item>
        <item>U.S. Virgin Islands (+1340)</item>
        <item>Uganda (+256)</item>
        <item>Ukraine (+380)</item>
        <item>United Arab Emirates (+971)</item>
        <item>United Kingdom (+44)</item>
        <item>United States (+1)</item>
        <item>Uruguay (+598)</item>
        <item>Uzbekistan (+998)</item>
        <item>Vanuatu (+678)</item>
        <item>Vatican (+379)</item>
        <item>Venezuela (+58)</item>
        <item>Vietnam (+84)</item>
        <item>Wallis and Futuna (+681)</item>
        <item>Western Sahara (+212)</item>
        <item>Yemen (+967)</item>
        <item>Zambia (+260)</item>
        <item>Zimbabwe (+236)</item>
    </string-array>
    <string name="title_activity_pharmacy_list_with_navigation">PharmacyListWithNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pharmacy_running_list">PharmacyRunningList</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_here">Add Medicine</string>
    <string name="title_activity_pharmacy_running_list_with_navigation">
        PharmacyRunningListWithNavigation
    </string>
    <string name="agent_registration">Agent Registration</string>
    <string name="name">Name</string>
    <string name="save_pharmacy_details">Save Pharmacy Details</string>
    <string name="save_agent_details">SAVE AGENT DETAILS</string>
    <string name="title_activity_agent_pharmacy_list_with_navigation">
        AgentPharmacyListWithNavigation
    </string>
    <string name="new_pharmacy">New Pharmacy</string>
    <string name="phone_number">Phone Number</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="emailid">EmailId</string>
</resources>