<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pharmacy.SignupOrLoginActivity"
    android:background="#ffffff"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/settings"
            android:layout_gravity="right"
            android:padding="12dp"
            android:tint="@color/heading_color"
            android:id="@+id/settings"
            android:visibility="visible"/>

<!--
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary">

        <com.pharmacy.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="XAMPR"
            android:gravity="center"
            app:typeface="robotoBold"
            android:textSize="24sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/door_number"
                android:tint="@color/colorPrimary"
                android:padding="4dp"
                />
            <com.pharmacy.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Details, Reviews and hot deals of business around you"
                android:textSize="14sp"
                android:padding="4dp"
                app:typeface="robotoLight"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_icon"
                android:tint="@color/colorPrimary"
                android:padding="4dp"
                />
            <com.pharmacy.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Share your opinions and reviews"
                android:textSize="14sp"
                android:padding="4dp"
                app:typeface="robotoLight"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/city"
                android:tint="@color/colorPrimary"
                android:padding="4dp"
                />
            <com.pharmacy.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Explore the business and review experience"
                android:textSize="14sp"
                android:padding="4dp"
                app:typeface="robotoLight"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/logoss"
                    android:layout_gravity="center"/>

                <com.pharmacy.RobotoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/heading_color"
                    app:typeface="robotoBold"
                    android:gravity="center"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
     android:layout_weight="2"
        android:gravity="center"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="12dp"
            android:gravity="center"
            android:id="@+id/sol_group">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pharmacy"
                android:id="@+id/sol_pharmacy"
                android:padding="6dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agent"
                android:padding="6dp"
                android:id="@+id/sol_agent"/>

        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/register"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:id="@+id/sol_register_button"
            android:gravity="center"
            android:fontFamily="robotoLight"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
             android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="robotoLight"

            android:id="@+id/sol_login_button"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>
